--- a/package.json
+++ b/package.json
@@ -41,5 +41,6 @@
   },
   "devDependencies": {
     "gh-pages": "^6.0.0"
-  }
+  },
+  "homepage": "https://manmolecula.github.io/react-mesto-auth"
 }
