--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "mesto-react",
   "version": "0.1.0",
+  "homepage": "https://manmolecula.github.io/react-mesto-auth",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.14.1",
@@ -41,6 +42,5 @@
   },
   "devDependencies": {
     "gh-pages": "^6.0.0"
-  },
-  "homepage": "https://manmolecula.github.io/sing-in"
+  }
 }
